# OpenCFD-SC

./: CMakeLists.txt  LICENSE  OCFD_ANA.f90  OCFD_ANA_savedata.f90  OCFD_BC.f90  OCFD_BC_Boundarylayers.f90  OCFD_BC_Def.f90  OCFD_GhostCell.f90  OCFD_GhostCell_UserDef.f90  OCFD_IO.f90  OCFD_IO_mpi.f90  OCFD_NS_Solver.f90  OCFD_Schemes.f90  OCFD_Schemes_1.f90  OCFD_SetHybrid.f90  OCFD_Time_Adv.f90  OCFD_dxyz_viscous.f90  OCFD_filtering.f90  OCFD_flux_split.f90  OCFD_handle_NegativeT.f90  OCFD_init.f90  OCFD_inviscous.f90  OCFD_inviscous_character.f90  OCFD_mesh.f90  OCFD_mpi.f90  OCFD_parameters.f90  OCFD_readpara.f90  OCFD_viscous.f90  README.md  makefile  opencfd.f90  test-dx-invis.f90  test-dxyz0.f90
.github/workflows/: autotest.yml
cases/blunt-cylinder/: Grid_and_init_HC3d.f90  opencfd2.in  readme.txt
cases/compression-ramp-Ma6/: Interploation-corner3d-1.0.f90  flow1d-inlet.dat.origin  grid-conner.in  init3d-1.2.f90  mesh-conner-4.f90  opencfd2-hybrid.in  opencfd2-omp6.in  readme.txt  testR.f90
cases/flatplate-Ma2.25/: Grid-and-init.f90  Grid-and-init.out  opencfd2.in  read-flatplate.f90  readme.txt
cases/flatplate-Ma2.25/data/: readme.txt
cases/flatplate-Ma2.25/in/: opencfd2-OMP6.in  opencfd2-hybrid.in
cases/isotropic/: Energy-spectrum-FFT3d-v1.1.f90  Grid.f90  init-isotropic.f90  opencfd-hybrid.in  opencfd2-omp6.in  opencfd2.in
cases/isotropic/data/: statis.lpk
examples/: CMakeLists.txt
examples/Taylor-Green-Vortex/: CMakeLists.txt  opencfd2.in
examples/blunt-cylinder/: CMakeLists.txt  opencfd2.in
examples/isotropic/: CMakeLists.txt  opencfd2.in
src/: CMakeLists.txt  OCFD_ANA.f90  OCFD_ANA_savedata.f90  OCFD_BC.f90  OCFD_BC_Boundarylayers.f90  OCFD_BC_Def.f90  OCFD_GhostCell.f90  OCFD_GhostCell_UserDef.f90  OCFD_IO.f90  OCFD_IO_mpi.f90  OCFD_NS_Solver.f90  OCFD_Schemes.f90  OCFD_Schemes_1.f90  OCFD_SetHybrid.f90  OCFD_Time_Adv.f90  OCFD_User_Def.f90  OCFD_dxyz_viscous.f90  OCFD_filtering.f90  OCFD_flowinit.f90  OCFD_flux_split.f90  OCFD_handle_NegativeT.f90  OCFD_init.f90  OCFD_inviscous.f90  OCFD_inviscous_character.f90  OCFD_mesh.f90  OCFD_mpi.f90  OCFD_parameters.f90  OCFD_readpara.f90  OCFD_viscous.f90  opencfd.f90  readme.txt  test-dx-invis.f90  test-dxyz0.f90
util/: init3d-1.3.f90  interpolation-Z-1.0.f90  interpolation-inlet1d.f90  postproc3d-1.0.f90  postproc3d-1.1.f90  transform-mesh.f90
